--- a/HybridSeleniumCucumber/test-output/old/Default suite/methods-alphabetical.html
+++ b/HybridSeleniumCucumber/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8ed190">  <td>20/12/03 23:32:13</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;OrangeHrmLginTest.close()[pri:0, instance:com.testCases.OrangeHrmLginTest@7ee55e70]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@404036116</td>   <td></td> </tr>
-<tr bgcolor="8ed190">  <td>20/12/03 23:32:12</td>   <td>-1680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrangeHrmLginTest.login()[pri:0, instance:com.testCases.OrangeHrmLginTest@7ee55e70]">login</td> 
-  <td>main@404036116</td>   <td></td> </tr>
-<tr bgcolor="8ed190">  <td>20/12/03 23:32:03</td>   <td>-9892</td> <td>&nbsp;</td><td title="&gt;&gt;OrangeHrmLginTest.stratUp()[pri:0, instance:com.testCases.OrangeHrmLginTest@7ee55e70]">&gt;&gt;stratUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@404036116</td>   <td></td> </tr>
+<tr bgcolor="6f98e6">  <td>20/12/07 13:24:50</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;LoginTest.close()[pri:0, instance:com.testCases.LoginTest@25243bc1]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1406004470</td>   <td></td> </tr>
+<tr bgcolor="6f98e6">  <td>20/12/07 13:24:49</td>   <td>-1731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.login()[pri:0, instance:com.testCases.LoginTest@25243bc1]">login</td> 
+  <td>main@1406004470</td>   <td></td> </tr>
+<tr bgcolor="6f98e6">  <td>20/12/07 13:24:39</td>   <td>-11318</td> <td>&nbsp;</td><td title="&gt;&gt;LoginTest.stratUp()[pri:0, instance:com.testCases.LoginTest@25243bc1]">&gt;&gt;stratUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1406004470</td>   <td></td> </tr>
 </table>
